tests/expectations/compiler/futures/explicit_return_type_fail.out
DCE_ENABLED:
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:9:5
     |
   9 |     async function finalize() -> Future {
  10 |         Mapping::set(foo, 1u32, 1u32);
  11 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372110]: A `transition` cannot return a future.
    --> compiler-test:9:34
     |
   9 |     async function finalize() -> Future {
     |                                  ^^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:9:5
     |
   9 |     async function finalize() -> Future {
  10 |         Mapping::set(foo, 1u32, 1u32);
  11 |     }
     |     ^

DCE_DISABLED:
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:9:5
     |
   9 |     async function finalize() -> Future {
  10 |         Mapping::set(foo, 1u32, 1u32);
  11 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372110]: A `transition` cannot return a future.
    --> compiler-test:9:34
     |
   9 |     async function finalize() -> Future {
     |                                  ^^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:9:5
     |
   9 |     async function finalize() -> Future {
  10 |         Mapping::set(foo, 1u32, 1u32);
  11 |     }
     |     ^
